<resources>
    <string name="app_name">Android Books Client</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_name">Book\'s name</string>
    <string name="navigation_books">Navigation books</string>
    <string name="id">ID : </string>
    <string name="book_title">"Book title : "</string>
    <string name="authors_name">"Author's name : "</string>
    <string name="a_book">A book</string>
    <string name="back">Back</string>
    <string name="title_book_information">Book\'s information</string>
    <string name="add_book">Add a book</string>
    <string name="delete">Delete</string>
    <string name="publication_year">"Publication year : "</string>
    <string name="author_id">"Author ID : "</string>
    <string name="one_author">One author</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="books">Books</string>
    <string name="title_authors">Authors</string>
    <string name="authors">Authors</string>
    <string name="author_informations">Author\'s informations</string>
    <string name="book_of_author">Author\'s book</string>
    <string name="title_books_of_author">Books of author</string>
    <string name="title_add_author">Add author</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">Last name</string>
    <string name="add_author">Add author</string>
    <string name="tag_name">Tag\'s name</string>
    <string name="tags">Tag(s)</string>
    <string name="tags_">Tag(s) :</string>
    <string name="title_books">Books</string>
</resources>
