<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.AddBookFragment">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_name" />

    <EditText
        android:id="@+id/et_publication_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/publication_year" />

    <EditText
        android:id="@+id/et_author_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_id" />

    <Button
        android:id="@+id/btn_add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_book" />

</LinearLayout>