<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_author_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.author_informations.AuthorInformationFragment" >

    <TextView
        android:id="@+id/tv_author_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id" />

    <TextView
        android:id="@+id/tv_author_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/tv_author_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/tv_author_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/books" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_books_of_author"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>