<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_books">

    <fragment
        android:id="@+id/navigation_books"
        android:name="AndroidBooksClient.androidbooksclient.BooksFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_books">
        <action
            android:id="@+id/action_navigation_books_to_navigation_bookInformation"
            app:destination="@id/navigation_bookInformation" />
        <action
            android:id="@+id/action_navigation_books_to_navigation_addBook"
            app:destination="@id/navigation_addBook" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookInformation"
        android:name="AndroidBooksClient.androidbooksclient.BookInformation"
        android:label="@string/title_book_information"
        tools:layout="@layout/fragment_book_information" >
        <action
            android:id="@+id/action_navigation_bookInformation_to_navigation_books"
            app:destination="@id/navigation_books" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="AndroidBooksClient.androidbooksclient.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="AndroidBooksClient.androidbooksclient.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_addBook"
        android:name="AndroidBooksClient.androidbooksclient.AddBookFragment"
        android:label="@string/add_book"
        tools:layout="@layout/fragment_add_book" >
        <action
            android:id="@+id/action_navigation_addBook_to_navigation_books"
            app:destination="@id/navigation_books" />
    </fragment>

    

</navigation>